# alem-env

./: .dockerignore  .gitignore  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  EVALUATION.md  README.md  SUBMISSION.md  SYSTEM_PROMPT.md  pyproject.toml  requirements-gpu.txt  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  coverage.yml  publish.yml
alem/: __init__.py  alem_env.py
alem/alem_coop/: action_masking.py  alem_state.py  constants.py  game_logic.py
alem/alem_coop/envs/: alem_pixels_env.py  alem_symbolic_env.py  alem_symbolic_env_debug.py  alem_symbolic_single_agent_env.py  common.py
alem/alem_coop/renderer/: renderer_llm.py  renderer_pixels.py  renderer_symbolic.py
alem/alem_coop/util/: game_logic_utils.py  maths_utils.py  noise.py
alem/alem_coop/world_gen/: world_gen.py  world_gen_configs.py
alem/environment_base/: environment_bases.py  jaxmarl_compat.py  util.py
alem/llm/: __init__.py  action_parser.py  alem_env.py  alem_language_wrapper.py  alem_language_wrapper_single.py  ascii_map.py
alem/tests/: conftest.py  test_action_parser.py  test_construction.py  test_coordination.py  test_debug_envs.py  test_env_factory.py  test_llm_wrappers.py  test_observation_space_sizes.py
baselines/: ippo_hypermarl_rnn.py  ippo_rnn.py  ippo_rnn_nops.py  mappo_rnn.py  pqn_vdn_rnn.py  utils.py
baselines/config/: hypermarl_rnn.yaml  ippo_rnn.yaml  ippo_rnn_nops.yaml  ippo_rnn_single_agent.yaml  mappo_rnn.yaml  pqn_vdn_rnn.yaml
baselines/llm/: README.md  alem_env.py  alem_language_wrapper.py  alem_language_wrapper_single.py  ascii_map.py  eval_alem.py  play_human.py  test_ascii_map.py  test_language_wrapper.py  utils.py
baselines/llm/config/: config.yaml
baselines/llm/eval_utils/: __init__.py  client.py  debug_visualiser.py  evaluator.py  prompt_builder.py
baselines/llm/eval_utils/agents/: __init__.py  base.py  chain_of_thought.py  custom.py  dummy.py  few_shot.py  naive.py  random.py  robust_all.py  robust_cot.py  robust_naive.py
docker/: Dockerfile.env
examples/: llm_openai_smoke.py  llm_text_smoke.py  play_alem.py  random_rl_agent.py
