[build-system]
requires = ["setuptools>=82.0.0", "wheel>=0.46.3"]
build-backend = "setuptools.build_meta"

[project]
name = "alem-env"
version = "0.1.0"
description = "A JAX environment for open-ended multi-agent coordination."
readme = "README.md"
requires-python = ">=3.11, <3.13"
license = { text = "MIT" }
keywords = ["reinforcement-learning", "multi-agent", "jax", "llm-agents", "benchmark"]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "chex>=0.1.90",
  "flax==0.10.3",
  "imageio>=2.37.0",
  "jax==0.4.38",
  "jaxlib==0.4.38",
  "matplotlib>=3.8.0",
  "numpy>=1.26.0",
  "pillow>=10.0.0",
  "scipy>=1.12.0",
  "seaborn>=0.13.0",
]

[project.optional-dependencies]
gpu = [
  "jax[cuda12]==0.4.38",
]
cuda12 = [
  "jax[cuda12]==0.4.38",
]
llm = [
  "openai>=1.0.0",
]
play = [
  "pygame>=2.6.0",
]
# JAX RL baselines (IPPO / MAPPO / PQN-VDN, HyperMARL).
baselines-rl = [
  "jaxmarl>=0.0.3",
  "distrax>=0.1.5",
  "optax>=0.2.0",
  "orbax-checkpoint>=0.5.0",
  "hydra-core>=1.3.0",
  "omegaconf>=2.3.0",
  "wandb>=0.16.0",
  "pyyaml>=6.0",
]
# LLM-agent evaluation harness. Provider SDKs are optional (imported lazily);
# install only the ones you use.
baselines-llm = [
  "hydra-core>=1.3.0",
  "omegaconf>=2.3.0",
  "wandb>=0.16.0",
  "tqdm>=4.66.0",
  "openai>=1.0.0",
  "anthropic>=0.40.0",
  "google-genai>=0.3.0",
]
dev = [
  "pytest>=8.0.0",
  "pytest-cov>=5.0.0",
  "jaxtyping>=0.2.34",
  "beartype>=0.18.0",
  "ruff>=0.4.0",
]

[project.urls]
Homepage = "https://github.com/alem-world/alem-env"
Repository = "https://github.com/alem-world/alem-env"
Paper = "https://arxiv.org/abs/2606.08340"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["alem*"]
exclude = [
  "alem.tests*",
  "baselines*",
  "craftax*",
  "visualise*",
  "outputs*",
  "wandb*",
]

[tool.setuptools.package-data]
"alem.alem_coop" = ["assets/*"]

[tool.ruff]
line-length = 100
target-version = "py312"
# Research/demo code is intentionally not held to the library's lint+format bar.
# Top-level (file-resolver) exclude so both `ruff check` and `ruff format` skip these.
exclude = ["visualise/", "examples/", "baselines/"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = [
  "E501",   # line too long (handled by formatter)
  "E741",   # ambiguous variable names (l, O, I common in math/RL)
  "F401",   # unused imports (re-exports in __init__.py)
  "F722",   # jaxtyping uses multi-word strings in annotations (e.g. "player_count n")
  "F821",   # jaxtyping dimension names look like undefined names to ruff
  "UP037",  # jaxtyping requires quoted strings in subscript annotations
]
